--- a/src/manifest/common.manifest.json
+++ b/src/manifest/common.manifest.json
@@ -29,7 +29,7 @@
       "js": ["content.js"],
       "css": ["content.css"],
       "matches": ["<all_urls>"],
-      "exclude_matches": ["http://127.0.0.1/base/*"]
+      "exclude_matches": ["http://127.0.0.1/base/*","file:///*salad/*"]
     },
     {
       "js": ["selection.js"],
